--- a/index.html
+++ b/index.html
@@ -5,31 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>banana speak</title>
+    <link rel="stylesheet" href="style.css">
     
-    <style> 
-    textarea{
-        padding: 1rem;
-        display: block;
-        width: 80%;
-        height: 10vh;
-        margin: 1rem;
-    }
-    #output{
-        padding: 1rem;
-        width: 80%;
-        height: 10vh;
-        margin: 1rem;
-        border:1px solid black;
-
-    }
-    </style>
 </head>
 <body>
-  <header><h1> Pig latin Translator </h1></header> 
+  <header><h1> Pig latin Translator </h1></header> <hr>
+  <p> Pig Latin takes the first consonant (or consonant cluster) of an English word, moves it to the end of the word and suffixes an ay. For example, pig ==> igpay</p>
+  <div class="container">
     <textarea id="txt-input" placeholder=" write anything here "></textarea>
     <button id="btn-translate">Translate</button>
-    <div>Output will come here ☟ </div>
+    <div style="font-size:x-large; color: rgba(1, 41, 46, 0.788);" >Output will come here ☟ </div>
     <div id="output"> </div>
- <script src="app.js" type="text/javascript"> </script>
+ 
+</div>
 </body>
+<script src="app.js" type="text/javascript"> </script>
 </html>
