fix-error-handler

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <div class="container">
     <textarea id="txt-input" placeholder=" write anything here "></textarea>
     <button id="btn-translate">Translate</button>
+    <p style="color: red;" id="error-message"></p>
     <div style="font-size:x-large; color: rgba(1, 41, 46, 0.788);" >Output will come here ☟ </div>
     <div id="output"> </div>
  
